// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResetPassword Component ResetPasswordPage 1`] = `
<div>
  <div
    className="reset-field"
  >
    <Connect(Alert) />
    <div
      id="reset-info"
    >
      Enter your email below and we will send you a link to reset your password.
    </div>
    <form
      id="sendEmailForm"
      onSubmit={[Function]}
    >
      <div
        className="field"
      >
        <div
          className="control has-icons-left has-icons-right"
        >
          <input
            className="input is-medium "
            onChange={[Function]}
            placeholder="Enter email"
            type="email"
            value=""
          />
          <span
            className="icon is-medium is-left "
          >
            <i
              className="fas fa-envelope"
            />
          </span>
        </div>
      </div>
      <button
        className="button is-primary is-medium is-fullwidth "
        id="resetPasswordBtn"
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</div>
`;

exports[`ResetPassword Component ResetPasswordPage 2`] = `
<div>
  <div
    className="reset-field"
  >
    <Connect(Alert) />
    <div
      id="reset-info"
    >
      Enter your email below and we will send you a link to reset your password.
    </div>
    <form
      id="sendEmailForm"
      onSubmit={[Function]}
    >
      <div
        className="field"
      >
        <div
          className="control has-icons-left has-icons-right"
        >
          <input
            className="input is-medium "
            onChange={[Function]}
            placeholder="Enter email"
            type="email"
          />
          <span
            className="icon is-medium is-left "
          >
            <i
              className="fas fa-envelope"
            />
          </span>
        </div>
      </div>
      <button
        className="button is-primary is-medium is-fullwidth "
        id="resetPasswordBtn"
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</div>
`;
